--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -78,6 +78,7 @@
               <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
             </div>
             <div class="formData">
+              <span class="radio-tournois">Merci de choisir le nombre de tournois</span>
               <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
               <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
             </div>
@@ -132,10 +133,11 @@
       </div>
     </div>
     <div class="submitvalid">
-      <div class="content">
-        <div class="modal-body">
-          <p>Merci pour votre inscription</p>
-          <input class="btn-close" type="text" class="button" value="Fermer" />
+      <div class="content-validation">
+        <span class="close-validation"></span>
+        <div class="modal-body-validation">
+          <p class="text-validation">Merci pour votre inscription</p>
+          <input class="btn-close-validation" type="text" class="button" value="Fermer" />
         </div>
       </div>
     </div>
