--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -74,12 +74,13 @@
               <input class="text-control" type="text" id="email" name="email" /><br>
             </div>
             <div class="formData">
+              <span class="validanniv">Mettre la date de naissance !!</span>
               <label>Date de naissance</label><br>
               <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
             </div>
             <div class="formData">
               <span class="radio-tournois">Merci de choisir le nombre de tournois</span>
-              <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
+              <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
               <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
             </div>
             <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
@@ -114,7 +115,8 @@
             </div>
 
             <div class="formData">
-              <input class="checkbox-input" type="checkbox" id="checkbox1" checked />
+              <span class="condition-vente">Valider les conditions !!</span>
+              <input class="checkbox-input" type="checkbox" id="checkbox1"/>
               <label class="checkbox2-label" for="checkbox1" required>
                 <span class="checkbox-icon"></span>
                 J'ai lu et accepté les conditions d'utilisation.
@@ -137,7 +139,7 @@
         <span class="close-validation"></span>
         <div class="modal-body-validation">
           <p class="text-validation">Merci pour votre inscription</p>
-          <input class="btn-close-validation" type="text" class="button" value="Fermer" />
+          <input class="btn-close-validation" id="fermevalid" type="text" class="button" value="Fermer" />
         </div>
       </div>
     </div>
