--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -57,25 +57,25 @@
         <div class="modal-body">
           <form name="reserve" action="index.html" method="get">
             <div class="formData">
-              <label>Prénom</label>
+              <label for="first">Prénom</label>
               <br>
               <span class="alertMessage">Attention minimum 2 caractères</span>
 
               <input class="text-control" type="text" id="first" name="first" minlength="2" /><br>
             </div>
             <div class="formData">
-              <label>Nom</label><br>
+              <label for="last">Nom</label><br>
               <span class="alertMessage">Attention minimum 2 caractères</span>
               <input class="text-control" type="text" id="last" name="last" /><br>
             </div>
             <div class="formData">
-              <label class="Email">E-mail</label><br>
+              <label for="email" class="Email">E-mail</label><br>
               <span class="alertMessage">Email non valide</span>
               <input class="text-control" type="text" id="email" name="email" /><br>
             </div>
             <div class="formData">
               <span class="validanniv">Mettre la date de naissance !!</span>
-              <label>Date de naissance</label><br>
+              <label for="birthdate">Date de naissance</label><br>
               <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
             </div>
             <div class="formData">
