--- a/galdeano_luis_code_01/index.html
+++ b/galdeano_luis_code_01/index.html
@@ -134,6 +134,7 @@
         </div>
       </div>
     </div>
+    <!--------Fenetre de validation  du formulaire ------------------->
     <div class="submitvalid">
       <div class="content-validation">
         <span class="close-validation"></span>
